--- a/styles.css
+++ b/styles.css
@@ -29,13 +29,17 @@ body{
 }
 .display-value{
     width: max-content;
-    margin: 0 1rem 0 0;
-    font-size: 4rem;
+    margin: 0 1rem 1rem 0;
+    font-size: 4.5rem;
     color: var(--primary-font-color);
 }
 .display-op{
-    width: max-content;
-    margin: 0 1rem 0.8rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: 0 1rem 1.5rem 0;
     font-size: 1.2rem;
     color: var(--primary-font-color);
 }
